fixed nav bar for sponsors

--- a/src/sponsors.html
+++ b/src/sponsors.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Act4Kidz</title>
+    <title>Act4Kids</title>
     <link href="Styles.css" rel="stylesheet" type="text/css" media="all" />
   </head>
   <body>
@@ -27,28 +27,18 @@
           </div>
     		</div>
     		<div class="navbar">
-          <ul class="navbar">
-            <li class="navbar"><a href="#home">Home</a></li>
-            <li class="navbar"><a href="#about">About</a></li>
-            <li class="navbar"><a href="#contacts">Contacts</a></li>
-            <li class="navbar"><a href="#donations">Donations</a></li>
-			<li class="navbar"><a href="#sponsors">Sponsors</a></li>
-            <li class="navbar" class="dropdown">
-              <a href="javascript:void(0)" class="dropbtn">Services</a>
-              <div class="dropdown-content">
-                <a href="#">Therapy Services</a>
-                <a href="#">Family Intervention</a>
-                <a href="#">Education Services</a>
-                <a href="#">Residential Services</a>
-              </div>
-            </li>
+          <ul id="navbar" class="navbar">
+            <li class="navbar"><a href="index.html">Home</a></li>
+            <li class="navbar"><a href="about.html">About</a></li>
+            <li class="navbar"><a href="contact.html">Contacts</a></li>
+            <li class="navbar"><a href="donate.html">Donations</a></li>
+            <li class="navbar"><a href="services.html">Services</a></li>
+			<li class="navbar"><a href="sponsors.html">Sponsors</a></li>
           </ul>
     		</div>
     	</div>
     	<div id="page">
     		<div id="content">
-    			<div>
-    				<div class="title">
     					<h2><center>Our corporate partners and sponsors</center></h2>
     					<span class="byline"><center>Our generous sponsors give us so much more than money; many also provide pro-bono services and help us spread our message far and wide. Many of their amazing staff also volunteer to help us when we need an extra set of hands.</center></span> </div>
     				<span class="image image-full"><img src="" alt="" /></span>
