--- a/src/services.html
+++ b/src/services.html
@@ -148,7 +148,7 @@
     					<h2>Contact Us</h2>
     				</div>
     				<ul class="style2">
-    					<li><a href="#">Donations</a></li>
+    					<li><a href="donate.html">Donations</a></li>
     					<li><a href="https://www.facebook.com/ActforKids/">Facebook</a></li>
     					<li><a href="https://twitter.com/ACTforKids">Twitter</a></li>
     					<li><a href="https://www.instagram.com/actforkids/">Instagram</a></li>
