--- a/src/Contacts.html
+++ b/src/Contacts.html
@@ -28,11 +28,11 @@
     		</div>
     		<div class="navbar">
           <ul class="navbar">
-            <li class="navbar"><a href="#home">Home</a></li>
-            <li class="navbar"><a href="#about">About</a></li>
-            <li class="navbar"><a href="#contacts">Contacts</a></li>
-            <li class="navbar"><a href="#donations">Donations</a></li>
-			<li class="navbar"><a href="#donations">Services</a></li>
+            <li class="navbar"><a href="index">Home</a></li>
+            <li class="navbar"><a href="about">About</a></li>
+            <li class="navbar"><a href="contacts">Contacts</a></li>
+            <li class="navbar"><a href="donations">Donations</a></li>
+			<li class="navbar"><a href="donations">Services</a></li>
               </div>
             </li>
           </ul>
