Fixed for the hundredth time

--- a/src/services.html
+++ b/src/services.html
@@ -27,9 +27,6 @@
             </div>
           </div>
     		</div>
-			
-			<!-- Navbar -->
-			
     		<div class="navbar">
           <ul id="navbar" class="navbar">
             <li class="navbar"><a href="index.html">Home</a></li>
@@ -49,9 +46,22 @@
     					<span class="byline">Act for Kids proudly offers a range of support services to both children and their families!</span> </div>
     				<span class="image image-full"><img src="images/HelpingChildren.jpg" alt="" /></span>
     				<p>Act for kids is an organisation dedicated to making kids lives better, and to do this we offer many different service ranging from therapy from abuse and neglect trauma to providing safe homes for those under child protection orders.</p>
-    			</div
+    			</div>
+
+
+
+
+
+				<!-- Services -->
+				<!-- Services -->
+
+
+
+
 
 				<!-- Integrated Therapy Services -->
+
+
 
     			<div class="article">
     				<div class="title">
@@ -75,7 +85,11 @@
 					</ul>
     			</div>
 
+
+
 				<!-- Intensive Family Support -->
+
+
 
 				<div class="article">
     				<div class="title">
@@ -99,7 +113,11 @@
 					</ul>
     			</div>
 
+
+
 				<!-- Early Education Program -->
+
+
 
 				<div class="article">
     				<div class="title">
@@ -113,7 +131,11 @@
 					<p>A registered teacher develops individual learning plans for each child to ensure they reach their full potential. Children also receive support from a multi-disciplinary team of practitioners that can include psychologists, speech and language pathologists, occupational therapists, nurses, social workers and like disciplines. The program works with the parents, caregivers and other family members to help ensure the child is safe and happy and that they experience positive early development and interventions.</p>
     			</div>
 
+
+
 				<!-- SafeKIDS -->
+
+
 
 				<div class="article">
     				<div class="title">
@@ -124,44 +146,10 @@
 					<p><strong>Locations</strong></p>
 					<p>In partnership with The Aboriginal Corporation of West Coast Cape York Peninsula Traditional Land Owners (WCTO) and the Department of Communities, Child Safety and Disability Services, Act for Kids operates safe houses in Aurukun, Kowanyama, Napranum and Pormpuraaw.</p>
 					<p>Act for Kids operates a safe house in Doomadgee. It is expected we will transition control and management of the program to the traditional owners. Due to the success of the safe houses in the Cape and Gulf, Act for Kids was also asked to set up an additional safe house in Cairns.</p>
-<<<<<<< HEAD
     			<br>
 				<br>
 				<br>
 				<br>
-=======
-    			</div>
-    		</div>
-
-			<!--- Side Bar -->
-
-    		<div id="sidebar">
-    			<div class="box1">
-    				<div class="title">
-    					<h2>Navigation</h2>
-    				</div>
-    				<ul class="style2">
-    					<li><a href="index.html">Home</a></li>
-    					<li><a href="about.html">About</a></li>
-    					<li><a href="contact.html">Contacts</a></li>
-    					<li><a href="donate.html">Donations</a></li>
-    					<li><a href="services.html">Services</a></li>
-						<li><a href="sponsors.html">Sponsors</a></li>
-    				</ul>
-    			</div>
-    			<div class="box2">
-    				<div class="title">
-    					<h2>Contact Us</h2>
-    				</div>
-    				<ul class="style2">
-    					<li><a href="donate.html">Donations</a></li>
-    					<li><a href="https://www.facebook.com/ActforKids/">Facebook</a></li>
-    					<li><a href="https://twitter.com/ACTforKids">Twitter</a></li>
-    					<li><a href="https://www.instagram.com/actforkids/">Instagram</a></li>
-    					<li><a href="https://www.youtube.com/user/ACTforKids">YouTube</a></li>
-    				</ul>
-    			</div>
->>>>>>> e33741ffce956d108e87114fe424433a7298b221
 				</div>
     		</div>
 			  <div id="sidebar">
