--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
         				<li><a href="#" title="">Subscribe</a></li>
         			</ul>
             </div>
-            <div class="button_donate" class="button_default">
+            <div class="button_donate button_default">
               <ul class="link">
         				<li><a href="donate.html" title="">Donate</a></li>
         			</ul>
