--- a/src/sponsors.html
+++ b/src/sponsors.html
@@ -48,27 +48,28 @@
     			<div class="article">
     				<div class="title">
     					<h2><center> Official Partners </centre></h2>
-						<center><table border="2">
-    					<span class="byline"></span> </div>
-
-    				<tr><td><span class="image image-full"><img src="logo_08.jpg" alt="" /></span></td>
-						<td><span class="image image-full"><img src="logo_14.jpg" alt="" /></span></td>
-							<td><span class="image image-full"><img src="logo_17.jpg" alt="" /></span></td></tr>
-								<tr><td><span class="image image-full"><img src="logo_20.jpg" alt="" /></span></td>
-									<td><span class="image image-full"><img src="logo_26.jpg" alt="" /></span></td>
-										<td><span class="image image-full"><img src="logo_29.jpg" alt="" /></span></td></tr>
-											<tr><td><span class="image image-full"><img src="logo_38.jpg" alt="" /></span></td>
-												<td><span class="image image-full"><img src="logo_42.jpg" alt="" /></span></td>
-													<td><span class="image image-full"><img src="logo_45.jpg" alt="" /></span></td></tr>
-														<tr><td><span class="image image-full"><img src="logo_48.jpg" alt="" /></span></td>
-															<td><span class="image image-full"><img src="logo_54.jpg" alt="" /></span></td>
-																<td><span class="image image-full"><img src="logo_57.jpg" alt="" /></span><td></tr>
-																	<tr><td><span class="image image-full"><img src="logo_60.jpg" alt="" /></span></td>
-																		<td><span class="image image-full"><img src="logo_69.jpg" alt="" /></span></td>
-																			<td><span class="image image-full"><img src="logo_72.jpg" alt="" /></span></td></tr>
-																				<tr><td><span class="image image-full"><img src="logo_75.jpg" alt="" /></span></td>
-																					<td><span class="image image-full"><img src="logo_82.jpg" alt="" /></span></td></tr>
-					</table></center>
+            </div>
+						<center>
+              <table border="2">
+        				<tr><td><span class="image image-full"><img src="images\sponsor_logos\logo_08.jpg" alt="" /></span></td>
+    						<td><span class="image image-full"><img src="images\sponsor_logos\logo_14.jpg" alt="" /></span></td>
+    						<td><span class="image image-full"><img src="images\sponsor_logos\logo_17.jpg" alt="" /></span></td></tr>
+    						<tr><td><span class="image image-full"><img src="images\sponsor_logos\logo_20.jpg" alt="" /></span></td>
+    						<td><span class="image image-full"><img src="images\sponsor_logos\logo_26.jpg" alt="" /></span></td>
+    						<td><span class="image image-full"><img src="images\sponsor_logos\logo_29.jpg" alt="" /></span></td></tr>
+    						<tr><td><span class="image image-full"><img src="images\sponsor_logos\logo_38.jpg" alt="" /></span></td>
+    						<td><span class="image image-full"><img src="images\sponsor_logos\logo_42.jpg" alt="" /></span></td>
+    						<td><span class="image image-full"><img src="images\sponsor_logos\logo_45.jpg" alt="" /></span></td></tr>
+    						<tr><td><span class="image image-full"><img src="images\sponsor_logos\logo_48.jpg" alt="" /></span></td>
+    						<td><span class="image image-full"><img src="images\sponsor_logos\logo_54.jpg" alt="" /></span></td>
+    						<td><span class="image image-full"><img src="images\sponsor_logos\logo_57.jpg" alt="" /></span><td></tr>
+    						<tr><td><span class="image image-full"><img src="images\sponsor_logos\logo_60.jpg" alt="" /></span></td>
+    						<td><span class="image image-full"><img src="images\sponsor_logos\logo_69.jpg" alt="" /></span></td>
+    						<td><span class="image image-full"><img src="images\sponsor_logos\logo_72.jpg" alt="" /></span></td></tr>
+    						<tr><td><span class="image image-full"><img src="images\sponsor_logos\logo_75.jpg" alt="" /></span></td>
+    						<td><span class="image image-full"><img src="images\sponsor_logos\logo_82.jpg" alt="" /></span></td></tr>
+    					</table>
+            </center>
     			</div>
 				<br>
 				<br>
