--- a/src/sponsors.html
+++ b/src/sponsors.html
@@ -46,7 +46,7 @@
     			</div>
     			<div class="article">
     				<div class="title">
-    					<h2><center> Official Partners </centre></h2>
+    					<h2><center>Official Partners</center></h2>
     					<span class="byline"></span> </div> 
     				<span class="image image-full"><img src="logo_08.jpg" alt="" /></span>
 					<span class="image image-full"><img src="logo_14.jpg" alt="" /></span>
