--- a/src/services.html
+++ b/src/services.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Act4Kidz</title>
+    <title>Act4Kids</title>
     <link href="Styles.css" rel="stylesheet" type="text/css" media="all" />
     <link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon" />
   </head>
