--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
     <title>Act4Kidz</title>
     <link href="Styles.css" rel="stylesheet" type="text/css" media="all" />
     <link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon" />
+    <script src="scripts.js"></script>
   </head>
   <body>
     <div id="wrapper">
@@ -45,19 +46,15 @@
           </div>
           <div class="text">
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Why do we use it? It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
-            <div class="slider-holder">
-              <span id="slider-image-1"></span>
-              <span id="slider-image-2"></span>
-              <span id="slider-image-3"></span>
-              <div class="image-holder">
-                <img src="images/1.jpg" class="slider-image" />
-                <img src="images/2.jpg" class="slider-image" />
-                <img src="images/3.jpg" class="slider-image" />
+            <div id="slideshow">
+              <div>
+                <img src="http://farm6.static.flickr.com/5224/5658667829_2bb7d42a9c_m.jpg">
               </div>
-              <div class="button-holder">
-                <a href="#slider-image-1" class="slider-change"></a>
-                <a href="#slider-image-2" class="slider-change"></a>
-                <a href="#slider-image-3" class="slider-change"></a>
+              <div>
+                <img src="http://farm6.static.flickr.com/5230/5638093881_a791e4f819_m.jpg">
+              </div>
+              <div>
+                Pretty cool eh? This slide is proof the content can be anything.
               </div>
             </div>
           </div>
