Social media widgets

--- a/src/contact.html
+++ b/src/contact.html
@@ -46,7 +46,22 @@
 						<div class="slider_content">
     					<h1>Contact Us</h1>
     					<span class="byline">If you are a donor and would like to update your personal information, make a donation or you have a
-general inquiry about making a donation please contact us below.</span>
+general inquiry about making a donation please contact us below:</span>
+			<p> Phone: <b>1300 228 000</b> Email: <b>mail@actforkids.com.au</b>
+			<h2> Join us on Social Media </h2>
+			<p>
+			<a href="https://www.facebook.com/ActforKids/">
+			<img border="0" alt="facebook widget" src="images/facebook widget.jpg" width="60px" height="50px">
+			</a>
+			<a href="https://twitter.com/ACTforKids">
+			<img border="0" alt="twitter widget" src="images/twitter widget.jpg" width="60px" height="50px">
+			</a>
+			<a href="https://www.instagram.com/actforkids/">
+			<img border="0" alt="instagram widget" src="images/instagram widget.jpg" width="60px" height="50px">
+			</a>
+			<a href="https://www.youtube.com/user/ACTforKids">
+			<img border="0" alt="youtube widget" src="images/youtube widget.jpg" width="60px" height="50px">
+			</a>
 				<br>
 				<br>
 				<br>
