--- a/src/sponsors.html
+++ b/src/sponsors.html
@@ -51,43 +51,36 @@
 					</div>
 						<center>
               <table border="2">
-<<<<<<< HEAD
-							<tr><td><center><span class="image image-full"><img src="images\sponsor_logos\logo_08.jpg" alt="" /></span></center></td>
-    						<td><center><span class="image image-full"><img src="images\sponsor_logos\logo_14.jpg" alt="" /></span></center></td>
-    						<td><center><span class="image image-full"><img src="images\sponsor_logos\logo_17.jpg" alt="" /></span></center></td></tr>
-    						<tr><td><center><span class="image image-full"><img src="images\sponsor_logos\logo_20.jpg" alt="" /></span></center></td>
-    						<td><center><span class="image image-full"><img src="images\sponsor_logos\logo_26.jpg" alt="" /></span></center></td>
-    						<td><center><span class="image image-full"><img src="images\sponsor_logos\logo_29.jpg" alt="" /></span></center></td></tr>
-    						<tr><td><center><span class="image image-full"><img src="images\sponsor_logos\logo_38.jpg" alt="" /></span></center></td>
-    						<td><center><span class="image image-full"><img src="images\sponsor_logos\logo_42.jpg" alt="" /></span></center></td>
-    						<td><center><span class="image image-full"><img src="images\sponsor_logos\logo_45.jpg" alt="" /></span></center></td></tr>
-    						<tr><td><center><span class="image image-full"><img src="images\sponsor_logos\logo_48.jpg" alt="" /></span></center></td>
-    						<td><center><span class="image image-full"><img src="images\sponsor_logos\logo_54.jpg" alt="" /></span></center></td>
-    						<td><center><span class="image image-full"><img src="images\sponsor_logos\logo_57.jpg" alt="" /></span></center><td></tr>
-    						<tr><td><center><span class="image image-full"><img src="images\sponsor_logos\logo_60.jpg" alt="" /></span></center></td>
-    						<td><center><span class="image image-full"><img src="images\sponsor_logos\logo_69.jpg" alt="" /></span></center></td>
-    						<td><center><span class="image image-full"><img src="images\sponsor_logos\logo_72.jpg" alt="" /></span></center></td></tr>
-    						<tr><td><center><span class="image image-full"><img src="images\sponsor_logos\logo_75.jpg" alt="" /></span></center></td>
-    						<td><center><span class="image image-full"><img src="images\sponsor_logos\logo_82.jpg" alt="" /></span></center></td></tr>
-=======
-        				<tr><td><span class="image image-full"><a href="#" img src="images\sponsor_logos\logo_08.jpg" alt="" /></span></td>
-    						<td><span class="image image-full"><a href="#" img src="images\sponsor_logos\logo_14.jpg" alt="" /></span></td>
-    						<td><span class="image image-full"><a href="#" img src="images\sponsor_logos\logo_17.jpg" alt="" /></span></td></tr>
-    						<tr><td><span class="image image-full"><a href="#" img src="images\sponsor_logos\logo_20.jpg" alt="" /></span></td>
-    						<td><span class="image image-full"><a href="#" img src="images\sponsor_logos\logo_26.jpg" alt="" /></span></td>
-    						<td><span class="image image-full"><a href="#" img src="images\sponsor_logos\logo_29.jpg" alt="" /></span></td></tr>
-    						<tr><td><span class="image image-full"><a href="#" img src="images\sponsor_logos\logo_38.jpg" alt="" /></span></td>
-    						<td><span class="image image-full"><a href="#" img src="images\sponsor_logos\logo_42.jpg" alt="" /></span></td>
-    						<td><span class="image image-full"><a href="#" img src="images\sponsor_logos\logo_45.jpg" alt="" /></span></td></tr>
-    						<tr><td><span class="image image-full"><a href="#" img src="images\sponsor_logos\logo_48.jpg" alt="" /></span></td>
-    						<td><span class="image image-full"><a href="#" img src="images\sponsor_logos\logo_54.jpg" alt="" /></span></td>
-    						<td><span class="image image-full"><a href="#" img src="images\sponsor_logos\logo_57.jpg" alt="" /></span><td></tr>
-    						<tr><td><span class="image image-full"><a href="#" img src="images\sponsor_logos\logo_60.jpg" alt="" /></span></td>
-    						<td><span class="image image-full"><a href="#" img src="images\sponsor_logos\logo_69.jpg" alt="" /></span></td>
-    						<td><span class="image image-full"><a href="#" img src="images\sponsor_logos\logo_72.jpg" alt="" /></span></td></tr>
-    						<tr><td><span class="image image-full"><a href="#" img src="images\sponsor_logos\logo_75.jpg" alt="" /></span></td>
-    						<td><span class="image image-full"><a href="#" img src="images\sponsor_logos\logo_82.jpg" alt="" /></span></td></tr>
->>>>>>> 3a62f122a165be88b1da6d14387a7cb5525500a9
+							  <tr>
+                  <td><center><span class="image image-full"><img src="images\sponsor_logos\logo_08.jpg" alt="" /></span></center></td>
+    						  <td><center><span class="image image-full"><img src="images\sponsor_logos\logo_14.jpg" alt="" /></span></center></td>
+    						  <td><center><span class="image image-full"><img src="images\sponsor_logos\logo_17.jpg" alt="" /></span></center></td>
+                </tr>
+    						<tr>
+                  <td><center><span class="image image-full"><img src="images\sponsor_logos\logo_20.jpg" alt="" /></span></center></td>
+    						  <td><center><span class="image image-full"><img src="images\sponsor_logos\logo_26.jpg" alt="" /></span></center></td>
+    						  <td><center><span class="image image-full"><img src="images\sponsor_logos\logo_29.jpg" alt="" /></span></center></td>
+                </tr>
+    						<tr>
+                  <td><center><span class="image image-full"><img src="images\sponsor_logos\logo_38.jpg" alt="" /></span></center></td>
+    						  <td><center><span class="image image-full"><img src="images\sponsor_logos\logo_42.jpg" alt="" /></span></center></td>
+    						  <td><center><span class="image image-full"><img src="images\sponsor_logos\logo_45.jpg" alt="" /></span></center></td>
+                </tr>
+    						<tr>
+                  <td><center><span class="image image-full"><img src="images\sponsor_logos\logo_48.jpg" alt="" /></span></center></td>
+    						  <td><center><span class="image image-full"><img src="images\sponsor_logos\logo_54.jpg" alt="" /></span></center></td>
+    						  <td><center><span class="image image-full"><img src="images\sponsor_logos\logo_57.jpg" alt="" /></span></center><td>
+                </tr>
+    						<tr>
+                  <td><center><span class="image image-full"><img src="images\sponsor_logos\logo_60.jpg" alt="" /></span></center></td>
+                  <td><center><span class="image image-full"><img src="images\sponsor_logos\logo_66.jpg" alt="" /></span></center></td>
+    						  <td><center><span class="image image-full"><img src="images\sponsor_logos\logo_69.jpg" alt="" /></span></center></td>
+                </tr>
+    						<tr>
+                  <td><center><span class="image image-full"><img src="images\sponsor_logos\logo_72.jpg" alt="" /></span></center></td>
+                  <td><center><span class="image image-full"><img src="images\sponsor_logos\logo_75.jpg" alt="" /></span></center></td>
+    						  <td><center><span class="image image-full"><img src="images\sponsor_logos\logo_82.jpg" alt="" /></span></center></td>
+                </tr>
     					</table>
             </center>
     			</div>
