table fixed - sponsor grid

--- a/src/sponsors.html
+++ b/src/sponsors.html
@@ -63,19 +63,19 @@
   						  <td><img src="images\sponsor_logos\logo_45.jpg" alt="" /></td>
               </tr>
   						<tr>
-                <td>><img src="images\sponsor_logos\logo_48.jpg" alt="" /></td>
-  						  <td>><img src="images\sponsor_logos\logo_54.jpg" alt="" /></td>
-  						  <td>><img src="images\sponsor_logos\logo_57.jpg" alt="" /></td>
+                <td><img src="images\sponsor_logos\logo_48.jpg" alt="" /></td>
+  						  <td><img src="images\sponsor_logos\logo_54.jpg" alt="" /></td>
+  						  <td><img src="images\sponsor_logos\logo_57.jpg" alt="" /></td>
               </tr>
   						<tr>
-                <td>><img src="images\sponsor_logos\logo_60.jpg" alt="" /></td>
-                <td>><img src="images\sponsor_logos\logo_66.jpg" alt="" /></td>
-  						  <td>><img src="images\sponsor_logos\logo_69.jpg" alt="" /></td>
+                <td><img src="images\sponsor_logos\logo_60.jpg" alt="" /></td>
+                <td><img src="images\sponsor_logos\logo_66.jpg" alt="" /></td>
+  						  <td><img src="images\sponsor_logos\logo_69.jpg" alt="" /></td>
               </tr>
   						<tr>
-                <td>><img src="images\sponsor_logos\logo_72.jpg" alt="" /></td>
-                <td>><img src="images\sponsor_logos\logo_75.jpg" alt="" /></td>
-  						  <td>><img src="images\sponsor_logos\logo_82.jpg" alt="" /></td>
+                <td><img src="images\sponsor_logos\logo_72.jpg" alt="" /></td>
+                <td><img src="images\sponsor_logos\logo_75.jpg" alt="" /></td>
+  						  <td><img src="images\sponsor_logos\logo_82.jpg" alt="" /></td>
               </tr>
             </table>
           </div>
