--- a/src/contact.html
+++ b/src/contact.html
@@ -47,7 +47,7 @@
     					<h1>Contact Us</h1>
     					<span class="byline">If you are a donor and would like to update your personal information, make a donation or you have a
 general inquiry about making a donation please contact us below:</span>
-			<p> Phone: <b>1300 228 000</b> Email:<a href="mailto:mail@actforkids.com.au?Subject=enquiry%20" target="_top">Send Mail</a>
+			<p> Phone: <b>1300 228 000</b> Email:<a href="mailto:mail@actforkids.com.au?Subject=Enquiry%20" target="_top">Send Mail</a>
 			<h2> Join us on Social Media </h2>
 			<p>
 			<a href="https://www.facebook.com/ActforKids/">
