--- a/src/index.html
+++ b/src/index.html
@@ -10,19 +10,19 @@
       <div id="header">
     		<div id="logo_bar">
           <div id="logo_img">
-            <img src="images\bear logo.png" alt="bear logo" height=100px width=100px /img align=left>
+            <img src="images\bear logo.png" alt="bear logo" height=100px width=100px img align=left />
           </div>
           <div id="logo_title">
-            <img src="images\title.png" alt="Act For Kids" height=100px width=300px /img align=left>
+            <img src="images\title.png" alt="Act For Kids" height=100px width=300px img align=left />
           </div>
           <div id="logo_menu">
             <div class="button_default">
-              <ul class="link">
-        				<li><a href="#" title="">Subscribe</a></li>
+              <ul>
+        				<li><a href="http://google.com/" title="">Subscribe</a></li>
         			</ul>
             </div>
             <div class="button_donate button_default">
-              <ul class="link">
+              <ul>
         				<li><a href="donate.html" title="">Donate</a></li>
         			</ul>
             </div>
@@ -89,6 +89,7 @@
           </div>
         </div>
     	</div>
+    </div>
     </div>
     <div id="copyright">
    	  <p>&copy; Copyright 2017 Act for Kids. All rights reserved | ABN 98 142 986 767 |</a>.</p>
