--- a/src/services.html
+++ b/src/services.html
@@ -1,27 +1,28 @@
 <html>
   <head>
-    <title>Act For Kids | Services</title>
+    <title>Act For Kids | Home</title>
     <link href="Styles.css" rel="stylesheet" type="text/css" media="all" />
     <link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon" />
+    <script src="scripts.js"></script>
   </head>
   <body>
     <div id="wrapper">
       <div id="header">
     		<div id="logo_bar">
           <div id="logo_img">
-            <img src="images\bear logo.png" alt="bear logo" height=100px width=100px /img align=left>
+            <img src="images\bear logo.png" alt="bear logo" height=100px width=100px img align=left />
           </div>
           <div id="logo_title">
-            <img src="images\title.png" alt="Act For Kids" height=100px width=300px /img align=left>
+            <img src="images\title.png" alt="Act For Kids" height=100px width=300px img align=left />
           </div>
           <div id="logo_menu">
             <div class="button_default">
-              <ul class="link">
-        				<li><a href="#" title="">Subscribe</a></li>
+              <ul>
+        				<li><a href="http://google.com/" title="">Subscribe</a></li>
         			</ul>
             </div>
-            <div class="button_donate" class="button_default">
-              <ul class="link">
+            <div class="button_donate button_default">
+              <ul>
         				<li><a href="donate.html" title="">Donate</a></li>
         			</ul>
             </div>
