--- a/src/sponsors.html
+++ b/src/sponsors.html
@@ -9,10 +9,10 @@
       <div id="header">
         <div id="logo_bar">
           <div id="logo_img">
-            <img src="images\bear logo.png" alt="bear logo" height=100px width=100px /img align=left>
+            <img src="images\complete logo 2.png" alt="bear logo" height=100px width=325px /img align=left>
           </div>
           <div id="logo_title">
-            <img src="images\title.png" alt="Act For Kids" height=100px width=300px /img align=left>
+            
           </div>
           <div id="logo_menu">
             <div class="button_default">
