--- a/src/sponsors.html
+++ b/src/sponsors.html
@@ -49,34 +49,34 @@
           <div class="sponsor-grid">
             <table border="2">
   					  <tr>
-                <td><img src="images\sponsor_logos\logo_08.jpg" alt="" /></td>
-  						  <td><img src="images\sponsor_logos\logo_14.jpg" alt="" /></td>
-  						  <td><img src="images\sponsor_logos\logo_17.jpg" alt="" /></td>
+                <td><a href="http://www.publicis.com.au/"><img src="images\sponsor_logos\logo_08.jpg" alt="" /></a></td>
+  				<td><a href="http://www.australia.gov.au/"/><img src="images\sponsor_logos\logo_14.jpg" alt="" /></a></td>
+  				<td><a href="https://actrua.com.au/"/><img src="images\sponsor_logos\logo_17.jpg" alt="" /></a></td>
               </tr>
   						<tr>
-                <td><img src="images\sponsor_logos\logo_20.jpg" alt="" /></td>
-  						  <td><img src="images\sponsor_logos\logo_26.jpg" alt="" /></td>
-  						  <td><img src="images\sponsor_logos\logo_29.jpg" alt="" /></td>
+                <td><a href="http://www.subway.com/en-au"/><img src="images\sponsor_logos\logo_20.jpg" alt="" /></a></td>
+  				<td><a href="http://www.danielmorcombe.com.au/"/><img src="images\sponsor_logos\logo_26.jpg" alt="" /></a></td>
+  				<td><img src="images\sponsor_logos\logo_29.jpg" alt="" /></td>
               </tr>
   						<tr>
-                <td><img src="images\sponsor_logos\logo_38.jpg" alt="" /></td>
-  						  <td><img src="images\sponsor_logos\logo_42.jpg" alt="" /></td>
-  						  <td><img src="images\sponsor_logos\logo_45.jpg" alt="" /></td>
+                <td><a href="http://futuregeninvest.com.au/"/><img src="images\sponsor_logos\logo_38.jpg" alt="" /></a></td>
+  				<td><a href="http://www.vita-foundation.com.au/"/><img src="images\sponsor_logos\logo_42.jpg" alt="" /></a></td>
+  				<td><a href="https://www.budgetdirect.com.au/"><img src="images\sponsor_logos\logo_45.jpg" alt="" /></a></td>
               </tr>
   						<tr>
-                <td><img src="images\sponsor_logos\logo_48.jpg" alt="" /></td>
-  						  <td><img src="images\sponsor_logos\logo_54.jpg" alt="" /></td>
-  						  <td><img src="images\sponsor_logos\logo_57.jpg" alt="" /></td>
+                <td><a href="http://www.mbbrisbane.com.au/en/desktop/home.html"/><img src="images\sponsor_logos\logo_48.jpg" alt="" /></a></td>
+  				<td><a href="https://zarraffas.com/"/><img src="images\sponsor_logos\logo_54.jpg" alt="" /></a></td>
+  				<td><img src="images\sponsor_logos\logo_57.jpg" alt="" /></td>
               </tr>
   						<tr>
-                <td><img src="images\sponsor_logos\logo_60.jpg" alt="" /></td>
-                <td><img src="images\sponsor_logos\logo_66.jpg" alt="" /></td>
-  						  <td><img src="images\sponsor_logos\logo_69.jpg" alt="" /></td>
+                <td><a href="https://connecttelnorth.com.au/"/><img src="images\sponsor_logos\logo_60.jpg" alt="" /></a></td>
+                <td><a href="http://physikids.com.au/"/><img src="images\sponsor_logos\logo_66.jpg" alt="" /></a></td>
+  				<td><a href="http://www.capitolbca.com.au/"/><img src="images\sponsor_logos\logo_69.jpg" alt="" /></a></td>
               </tr>
   						<tr>
-                <td><img src="images\sponsor_logos\logo_72.jpg" alt="" /></td>
-                <td><img src="images\sponsor_logos\logo_75.jpg" alt="" /></td>
-  						  <td><img src="images\sponsor_logos\logo_82.jpg" alt="" /></td>
+                <td><a href="http://www.smartline.com.au/"/><img src="images\sponsor_logos\logo_72.jpg" alt="" /></a></td>
+                <td><a href="http://www.katrinachrist.com.au/"/><img src="images\sponsor_logos\logo_75.jpg" alt="" /></a></td>
+  				<td><a href="http://www.lilleybuild.com.au/"/><img src="images\sponsor_logos\logo_82.jpg" alt="" /></a></td>
               </tr>
             </table>
           </div>
