Edited contacts page

--- a/src/contact.html
+++ b/src/contact.html
@@ -50,12 +50,14 @@
     		<div id="content">
     			<div>
     				<div class="title">
+						<br />
     					<img src="images/picture 6.jpg" alt="picture 6.jpg" height=500px width=800/>
 						<div class="slider_content">
     					<h1>Contact Us</h1>
     					<span class="byline">If you are a donor and would like to update your personal information, make a donation or you have a
 general inquiry about making a donation please contact us below:</span>
-			<p> Phone: <b>1300 228 000</b> Email:<a href="mailto:mail@actforkids.com.au?Subject=Enquiry%20" target="_top">Send Mail</a>
+			<p> Phone: <b>1300 228 000</b></p>
+			<p>Email:<a href="mailto:mail@actforkids.com.au?Subject=Enquiry%20" target="_top">mail@actforkids.com.au</a></p>
 			<h2> Join us on Social Media </h2>
 			<p>
 			<a href="https://www.facebook.com/ActforKids/">
