Added titles for the billlionth time

--- a/src/about.html
+++ b/src/about.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Act For Kids | Home</title>
+    <title>Act For Kids | About Us</title>
     <link href="Styles.css" rel="stylesheet" type="text/css" media="all" />
     <link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon" />
     <script src="scripts.js"></script>
