--- a/src/contact.html
+++ b/src/contact.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Act For Kids | Contact Us</title>
+    <title>Act For Kids | Contact </title>
     <link href="Styles.css" rel="stylesheet" type="text/css" media="all" />
     <link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon" />
     <script src="scripts.js"></script>
