Fixed up errors

--- a/src/contact.html
+++ b/src/contact.html
@@ -112,7 +112,7 @@ general inquiry about making a donation please contact us below:</span>
     	</div>
     </div>
     <div id="copyright">
-   	  <p>&copy; Copyright 2017 Act for Kids. All rights reserved | ABN 98 142 986 767 |</a>.</p>
+   	  <p>&copy; Copyright 2017 Act for Kids. All rights reserved | ABN 98 142 986 767 |</a></p>
     </div>
   </body>
 </html>
