--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
     </div>
     </div>
     <div id="copyright">
-   	  <p>&copy; Copyright 2017 Act for Kids. All rights reserved | ABN 98 142 986 767 |</a>.</p>
+   	  <p>&copy; Copyright 2017 Act for Kids. All rights reserved | ABN 98 142 986 767 |</a></p>
     </div>
   </body>
 </html>
