--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
           <div id="logo_menu">
             <div class="button_default">
               <ul>
-        				<li><a href="http://google.com/" title="">Subscribe</a></li>
+        				<li><a href="testing.html" title="">Subscribe</a></li>
         			</ul>
             </div>
             <div class="button_donate button_default">
@@ -38,6 +38,7 @@
 			      <li class="navbar"><a href="sponsors.html">Sponsors</a></li>
           </ul>
     		</div>
+        <!--embed src="media/rddi.mp3" loop="true" autostart="false" hidden="false" /-->
     	</div>
     	<div id="page">
     		<div id="content">
@@ -46,18 +47,33 @@
           </div>
           <div class="text">
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Why do we use it? It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
-            <div id="slideshow">
-              <div>
-                <img src="http://farm6.static.flickr.com/5224/5658667829_2bb7d42a9c_m.jpg">
+            <div class="slideshow-container">
+              <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <img src="images\1.jpg" style="width:100%">
+                <div class="text">Caption Text</div>
               </div>
-              <div>
-                <img src="http://farm6.static.flickr.com/5230/5638093881_a791e4f819_m.jpg">
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <img src="images\2.jpg" style="width:100%">
+                <div class="text">Caption Two</div>
               </div>
-              <div>
-                Pretty cool eh? This slide is proof the content can be anything.
+              <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <img src="images\3.jpg" style="width:100%">
+                <div class="text">Caption Three</div>
               </div>
+              <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+              <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+            <br>
+            <div style="text-align:center">
+              <span class="dot" onclick="currentSlide(1)"></span>
+              <span class="dot" onclick="currentSlide(2)"></span>
+              <span class="dot" onclick="currentSlide(3)"></span>
             </div>
           </div>
+        </div>
         <div id="sidebar">
           <div id="twitter-feed">
             <br />
