added image to about page

--- a/src/about.html
+++ b/src/about.html
@@ -48,6 +48,7 @@
     	</div>
     	<div id="page">
     		<div id="content">
+			<center><img src="images\about picture.png" alt="bear logo" height=450px width=980px></center>
           <h2>About Act for kids</h2>
   				<div>
   					<h3>About us</h3>
