--- a/src/contact.html
+++ b/src/contact.html
@@ -48,7 +48,7 @@
     	</div>
     	<div id="page">
     		<div id="content">
-    			<div>
+    			</div>
     				<div class="title">
 						<br/>
     					<img src="images/picture 6.jpg" alt="picture 6.jpg" height=500px width=800/>
@@ -75,8 +75,8 @@ general inquiry about making a donation please contact us below:</span>
 			<div>Fax: (07) 4033 5811</div>
 			<h4>Cairns – SafeKIDS Program (servicing in Doomadgee & West Cape York)</h4>
 			Earlville, QLD, 4870, Australia
-			<div>Phone: (07) 4033 8517<div>	
-			<div>Fax: (07) 4033 8575<div>
+			<div>Phone: (07) 4033 8517</div>	
+			<div>Fax: (07) 4033 8575</div>
 			<h4>Doomadgee Safe House</h4>
 			Cnr Goodeedawa Road and Gunnulunja Drive, Doomadgee QLD 4830
 			<div>Phone: (07) 4745 8348</div>
