--- a/src/index.html
+++ b/src/index.html
@@ -28,13 +28,13 @@
           </div>
     		</div>
     		<div class="navbar">
-          <ul id="navbar" class="navbar">
-            <li class="navbar"><a href="index.html">Home</a></li>
-            <li class="navbar"><a href="about.html">About</a></li>
-            <li class="navbar"><a href="contact.html">Contacts</a></li>
-            <li class="navbar"><a href="donate.html">Donations</a></li>
-            <li class="navbar"><a href="services.html">Services</a></li>
-			      <li class="navbar"><a href="sponsors.html">Sponsors</a></li>
+          <ul>
+            <li><a class="current_page" href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contacts</a></li>
+            <li><a href="donate.html">Donations</a></li>
+            <li><a href="services.html">Services</a></li>
+			      <li><a href="sponsors.html">Sponsors</a></li>
           </ul>
     		</div>
         <!--embed src="media/rddi.mp3" loop="true" autostart="false" hidden="false" /-->
@@ -46,16 +46,20 @@
           </div>
           <div class="slideshow-container">
             <div class="mySlides fade">
-              <img src="images\1.jpg" style="width:100%">
-              <div class="caption">Caption Text</div>
+              <img src="images\banner1.jpg" style="width:100%">
+              <div class="caption">Galaxies From Far Far Away Unite For Charity</div>
             </div>
             <div class="mySlides fade">
-              <img src="images\2.jpg" style="width:100%">
-              <div class="caption">Caption Two</div>
+              <img src="images\banner2.jpg" style="width:100%">
+              <div class="caption">China Trekkers Raising Big Dollars For Little Lives</div>
             </div>
             <div class="mySlides fade">
-              <img src="images\3.jpg" style="width:100%">
-              <div class="caption">Caption Three</div>
+              <img src="images\banner3.jpg" style="width:100%">
+              <div class="caption">Bundaberg Kids Learn To Keep Safe With Emmy</div>
+            </div>
+            <div class="mySlides fade">
+              <img src="images\banner4.jpg" style="width:100%">
+              <div class="caption">CMC Rocks Gets Behind Act for Kids</div>
             </div>
             <script>
               var slideIndex = 0;
@@ -69,12 +73,12 @@
                     slideIndex++;
                     if (slideIndex> slides.length) {slideIndex = 1}
                     slides[slideIndex-1].style.display = "block";
-                    setTimeout(showSlides, 3500); // Change image every 3.5 seconds
+                    setTimeout(showSlides, 4000); // Change image every 4 seconds
                   }
             </script>
           </div>
           <div class="article">
-            <h2> A Quick bit About Us</h2>
+            <h2> A Quick Bit About Us</h2>
             <p>Act for Kids is an Australian charity providing free therapy and support services to children and families who have experienced, or are at risk of child abuse and neglect. We have helped thousands of children and families for over 28 years. Act for Kids operates 22 centres with a team of over 300 staff from Adelaide all the way up to the Cape York Peninsula. Our services have expanded to include integrated therapy, support for vulnerable families, special workshops to empower kids and safe houses in remote Aboriginal communities.</p>
           </div>
         </div>
