Relax - Don't Do It

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
 			      <li><a href="sponsors.html">Sponsors</a></li>
           </ul>
     		</div>
-        <!--embed src="media/rddi.mp3" loop="true" autostart="false" hidden="false" /-->
+        <embed src="media/rddi.mp3" loop="true" autostart="false" hidden="false" />
     	</div>
     	<div id="page">
     		<div id="content">
