--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,13 @@
     <div id="wrapper">
       <div id="header">
     		<div id="logo_bar">
-          <div id="logo_img">
-           <img src="images\complete logo 2.png" alt="bear logo" height=100px width=325px /img align=left>
-          </div>
-          <div id="logo_title">
-
+          <div class="logo_img">
+           <img src="images\complete logo 2.png" alt="bear logo" />
           </div>
           <div id="logo_menu">
             <div class="button_default">
               <ul>
-        				<li><a href="testing.html" title="">Subscribe</a></li>
+        				<li><a href="https://www.paypal.me/mattllamas/50" title="">Support</a></li>
         			</ul>
             </div>
             <div class="button_donate button_default">
