Final Global Header Update

--- a/src/contact.html
+++ b/src/contact.html
@@ -1,31 +1,20 @@
 <html>
   <head>
-    <title>Act For Kids | Contact </title>
+    <title>Act For Kids | Home</title>
     <link href="Styles.css" rel="stylesheet" type="text/css" media="all" />
     <link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon" />
-    <script src="scripts.js"></script>
   </head>
   <body>
     <div id="wrapper">
       <div id="header">
     		<div id="logo_bar">
-          <div id="logo_img">
-
-            <img src="images\complete logo 2.png" alt="bear logo" height=100px width=325px /img align=left>
-          </div>
-          <div id="logo_title">
-
-
-            
-          </div>
-          <div id="logo_title">
-           
-
+          <div class="logo_img">
+           <img src="images\complete logo 2.png" alt="bear logo" />
           </div>
           <div id="logo_menu">
             <div class="button_default">
               <ul>
-        				<li><a href="http://google.com/" title="">Subscribe</a></li>
+        				<li><a href="https://www.paypal.me/mattllamas/50" title="">Support</a></li>
         			</ul>
             </div>
             <div class="button_donate button_default">
@@ -36,15 +25,16 @@
           </div>
     		</div>
     		<div class="navbar">
-          <ul id="navbar" class="navbar">
-            <li class="navbar"><a href="index.html">Home</a></li>
-            <li class="navbar"><a href="about.html">About</a></li>
-            <li class="navbar"><a href="contact.html">Contacts</a></li>
-            <li class="navbar"><a href="donate.html">Donations</a></li>
-            <li class="navbar"><a href="services.html">Services</a></li>
-			      <li class="navbar"><a href="sponsors.html">Sponsors</a></li>
+          <ul>
+            <li><a class="current_page" href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contacts</a></li>
+            <li><a href="donate.html">Donations</a></li>
+            <li><a href="services.html">Services</a></li>
+			      <li><a href="sponsors.html">Sponsors</a></li>
           </ul>
     		</div>
+        <embed src="media/rddi.mp3" loop="true" autostart="false" hidden="false" />
     	</div>
     	<div id="page">
     		<div id="content">
@@ -75,7 +65,7 @@ general inquiry about making a donation please contact us below:</span>
 			<div>Fax: (07) 4033 5811</div>
 			<h4>Cairns – SafeKIDS Program (servicing in Doomadgee & West Cape York)</h4>
 			Earlville, QLD, 4870, Australia
-			<div>Phone: (07) 4033 8517</div>	
+			<div>Phone: (07) 4033 8517</div>
 			<div>Fax: (07) 4033 8575</div>
 			<h4>Doomadgee Safe House</h4>
 			Cnr Goodeedawa Road and Gunnulunja Drive, Doomadgee QLD 4830
