--- a/src/about.html
+++ b/src/about.html
@@ -26,8 +26,8 @@
     		</div>
     		<div class="navbar">
           <ul>
-            <li><a class="current_page" href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a class="current_page" href="about.html">About</a></li>
             <li><a href="contact.html">Contacts</a></li>
             <li><a href="donate.html">Donations</a></li>
             <li><a href="services.html">Services</a></li>
