developer support page update

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
           <div id="logo_menu">
             <div class="button_default">
               <ul>
-        				<li><a href="https://www.paypal.me/mattllamas/50" title="">Support</a></li>
+        				<li><a href="support.html" title="">Support</a></li>
         			</ul>
             </div>
             <div class="button_donate button_default">
