--- a/src/support.html
+++ b/src/support.html
@@ -42,31 +42,37 @@
             <h1>Support The Development Team!</h1>
             <p>Thanks for browsing through our site, we hope you enjoyed it. All this was made possible thanks to the brlliant developers from the Iron Squad at QAT. Feel free to help us out by donating to the induviduals who put this site together. Thanks for your support :)
           </div>
-          <div class="sponsor-grid">
+          <div class="support-grid">
             <table border="2">
   					  <tr>
-                <td><a href="https://www.paypal.me/mattllamas/50"><img src="images\sponsor_logos\logo_08.jpg" alt="" /></a></td>
-                <p> Matt Llamas: Mainframe and backend design</p>
+                <td>
+                  <a href="https://www.paypal.me/mattllamas/50"><img src="images\sponsor_logos\logo_08.jpg" alt="" /></a>
+                  <p> Matt Llamas: Mainframe and backend design</p>
+                </td>
+                <td>
+                  <a href="http://www.subway.com/en-au"/><img src="images\sponsor_logos\logo_20.jpg" alt="" /></a>
+                  <p>Cayton Brownie: Page designer and styling specialist</p>
+                </td>
               </tr>
-  						<tr>
-                <td><a href="http://www.subway.com/en-au"/><img src="images\sponsor_logos\logo_20.jpg" alt="" /></a></td>
-                <p>Cayton Brownie: Page designer and styling specialist</p>
+              <tr>
+                <td>
+                  <a href="https://www.paypal.me/mattllamas/50"><img src="images\sponsor_logos\logo_08.jpg" alt="" /></a>
+                  <p> Matt Llamas: Mainframe and backend design</p>
+                </td>
+                <td>
+                  <a href="http://www.subway.com/en-au"/><img src="images\sponsor_logos\logo_20.jpg" alt="" /></a>
+                  <p>Cayton Brownie: Page designer and styling specialist</p>
+                </td>
               </tr>
-  						<tr>
-                <td><a href="http://futuregeninvest.com.au/"/><img src="images\sponsor_logos\logo_38.jpg" alt="" /></a></td>
-                <p>Cayton Brownie: Page designer and styling specialist</p>
-              </tr>
-  						<tr>
-                <td><a href="http://www.mbbrisbane.com.au/en/desktop/home.html"/><img src="images\sponsor_logos\logo_48.jpg" alt="" /></a></td>
-                <p>Cayton Brownie: Page designer and styling specialist</p>
-              </tr>
-  						<tr>
-                <td><a href="https://connecttelnorth.com.au/"/><img src="images\sponsor_logos\logo_60.jpg" alt="" /></a></td>
-                <p>Cayton Brownie: Page designer and styling specialist</p>
-              </tr>
-  						<tr>
-                <td><a href="http://www.smartline.com.au/"/><img src="images\sponsor_logos\logo_72.jpg" alt="" /></a></td>
-                <p>Cayton Brownie: Page designer and styling specialist</p>
+              <tr>
+                <td>
+                  <a href="https://www.paypal.me/mattllamas/50"><img src="images\sponsor_logos\logo_08.jpg" alt="" /></a>
+                  <p> Matt Llamas: Mainframe and backend design</p>
+                </td>
+                <td>
+                  <a href="http://www.subway.com/en-au"/><img src="images\sponsor_logos\logo_20.jpg" alt="" /></a>
+                  <p>Cayton Brownie: Page designer and styling specialist</p>
+                </td>
               </tr>
             </table>
           </div>
