--- a/src/about.html
+++ b/src/about.html
@@ -14,7 +14,7 @@
           <div id="logo_menu">
             <div class="button_default">
               <ul>
-        				<li><a href="https://www.paypal.me/mattllamas/50" title="">Support</a></li>
+        				<li><a href="support.html" title="">Support</a></li>
         			</ul>
             </div>
             <div class="button_donate button_default">
@@ -26,8 +26,8 @@
     		</div>
     		<div class="navbar">
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a class="current_page" href="about.html">About</a></li>
+            <li><a class="current_page" href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contacts</a></li>
             <li><a href="donate.html">Donations</a></li>
             <li><a href="services.html">Services</a></li>
