Changed page title for about page

--- a/src/about.html
+++ b/src/about.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Act For Kids | Home</title>
+    <title>Act For Kids | About</title>
     <link href="Styles.css" rel="stylesheet" type="text/css" media="all" />
     <link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon" />
   </head>
@@ -39,6 +39,7 @@
     	<div id="page">
     		<div id="content">
 			<center><img src="images\about picture.png" alt="bear logo" height=570px width=980px></center>
+			
           <br>
 		  <br>
 		  <h2>About Act for kids</h2>
