--- a/src/donate.html
+++ b/src/donate.html
@@ -26,12 +26,12 @@
     		</div>
     		<div class="navbar">
           <ul>
-            <li><a class="current_page" href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contacts</a></li>
-            <li><a href="donate.html">Donations</a></li>
+            <li><a class="current_page" href="donate.html">Donations</a></li>
             <li><a href="services.html">Services</a></li>
-			      <li><a href="sponsors.html">Sponsors</a></li>
+			<li><a href="sponsors.html">Sponsors</a></li>
           </ul>
     		</div>
         <embed src="media/rddi.mp3" loop="true" autostart="false" hidden="false" />
