--- a/src/sponsors.html
+++ b/src/sponsors.html
@@ -39,8 +39,8 @@
     	<div id="page">
     		<div id="content">
   				<div class="title">
-            <h2>Our corporate partners and sponsors</h2>
-            <p>Our generous sponsors give us so much more than money; many also provide pro-bono services and help us spread our message far and wide. Many of their amazing staff also volunteer to help us when we need an extra set of hands.</p>
+				<center><h2>Our corporate partners and sponsors</center></h2>
+				<p>Our generous sponsors give us so much more than money; many also provide pro-bono services and help us spread our message far and wide. Many of their amazing staff also volunteer to help us when we need an extra set of hands.</p>
 					  <h2 style="text-align: center;">Official Partners</h2>
 				  </div>
           <div class="sponsor-grid">
