--- a/src/about.html
+++ b/src/about.html
@@ -48,16 +48,18 @@
             <p>Act for Kids is an Australian charity providing free therapy and support services to children and families who have experienced, or are at risk of child abuse and neglect. We have helped thousands of children and families for over 28 years. Act for Kids operates 22 centres with a team of over 300 staff from Adelaide all the way up to the Cape York Peninsula. Our services have expanded to include integrated therapy, support for vulnerable families, special workshops to empower kids and safe houses in remote Aboriginal communities.</p>
           </div>
           <div>
-            <h3>Our Purpose</h3>
-            <P>To prevent and treat child abuse and neglect.</p>
-          </div>
-          <div>
-            <h3>Our Vision</h3>
-            <p>All kids have a safe and happy childhood, free from abuse and neglect.</p>
-          </div>
-          <div>
-            <h3>Our Values</h3>
-            <p>We are a professional, ethical team who is caring, courageous and collaborative.</p>
+          <br>
+		  <br>
+		  <br>
+		  <table>
+           <tr><td><center><h3>Our Purpose</h3></center></td>
+		   <td><center><h3>Our Vision</h3></center></td>
+		   <td><center><h3>Our Values</h3></center></td></tr>
+		   <tr><td><center><P>To prevent and treat child abuse and neglect.</p></center></td>
+		   <td><center><p>All kids have a safe and happy childhood, free from abuse and neglect.</p></center></td>
+		   <td><center><p>We are a professional, ethical team who is caring, courageous and collaborative.</p></center></table></td>
+		   </table>
+
          <br>
 		 <br>
 		 <br>
