--- a/src/support.html
+++ b/src/support.html
@@ -26,7 +26,7 @@
     		</div>
     		<div class="navbar">
           <ul>
-            <li><a class="current_page" href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contacts</a></li>
             <li><a href="donate.html">Donations</a></li>
@@ -43,35 +43,38 @@
             <p>Thanks for browsing through our site, we hope you enjoyed it. All this was made possible thanks to the brlliant developers from the Iron Squad at QAT. Feel free to help us out by donating to the induviduals who put this site together. Thanks for your support :)
           </div>
           <div class="support-grid">
-            <table border="2">
+            <table>
   					  <tr>
                 <td>
-                  <a href="https://www.paypal.me/mattllamas/50"><img src="images\sponsor_logos\logo_08.jpg" alt="" /></a>
-                  <p> Matt Llamas: Mainframe and backend design</p>
+                  <a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\matt.jpg" alt="" /></a>
+                  <h3>Matt Llamas:</h3>
+                  <p>GitHub co-ordinator, mainframe and backend designer</p>
                 </td>
                 <td>
-                  <a href="http://www.subway.com/en-au"/><img src="images\sponsor_logos\logo_20.jpg" alt="" /></a>
-                  <p>Cayton Brownie: Page designer and styling specialist</p>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <a href="https://www.paypal.me/mattllamas/50"><img src="images\sponsor_logos\logo_08.jpg" alt="" /></a>
-                  <p> Matt Llamas: Mainframe and backend design</p>
+                  <a href="https://www.paypal.me/mattllamas/50"/><img src="images\developers\cayton.jpg" alt="" /></a>
+                  <h3>Cayton Browne:</h3>
+                  <p>Page designer, styling specialist and template analyst</p>
                 </td>
                 <td>
-                  <a href="http://www.subway.com/en-au"/><img src="images\sponsor_logos\logo_20.jpg" alt="" /></a>
-                  <p>Cayton Brownie: Page designer and styling specialist</p>
+                  <a href="https://www.paypal.me/mattllamas/50"/><img src="images\developers\parth.jpg" alt="" /></a>
+                  <h3>Parth Vijaydhar:</h3>
+                  <p>Page designer and wireframming developer</p>
                 </td>
               </tr>
               <tr>
                 <td>
-                  <a href="https://www.paypal.me/mattllamas/50"><img src="images\sponsor_logos\logo_08.jpg" alt="" /></a>
-                  <p> Matt Llamas: Mainframe and backend design</p>
+                  <a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\anthony.jpg" alt="" /></a>
+                  <h3>Anthony Calvillo:</h3>
+                  <p>Page designer, donations manager and site map integrator</p>
+                </td><td>
+                  <a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\josh.jpg" alt="" /></a>
+                  <h3>Joshua Deckert:</h3>
+                  <p>Page designer, sponsorship co-ordinator</p>
                 </td>
                 <td>
-                  <a href="http://www.subway.com/en-au"/><img src="images\sponsor_logos\logo_20.jpg" alt="" /></a>
-                  <p>Cayton Brownie: Page designer and styling specialist</p>
+                  <a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\daniel.jpg" alt="" /></a>
+                  <h3>Daniel Zantho:</h3>
+                  <p>Team leader, page and graphic designer</p>
                 </td>
               </tr>
             </table>
