Font changes and colour

--- a/src/contact.html
+++ b/src/contact.html
@@ -57,13 +57,15 @@
 		</div>
 			</div>
 				</div>
-    				<span class="byline"> <h4>If you are a donor and would like to update your personal information, make a donation or you have a
-general inquiry about making a donation please contact us below:</h4></span>
+    				<span class="byline"><div id="contactline"> <h4>If you are a donor and would like to update your personal information, make a donation or you have a
+general inquiry about making a donation please contact us below:</h4></span></div>
 			<p> Phone: <b>1300 228 000</b></p>
 			<p>Email:<a href="mailto:mail@actforkids.com.au?Subject=Enquiry%20" target="_top">mail@actforkids.com.au</a></p>
-			<h2> National office </h2>
+			<div id="office">
+			<h2><b>National office</b></h2> </div>
 			<p> 1/9 Gardner Cl, Brisbane City QLD 4064</p>
-			<h2> Act for Kids Service centers </h2>
+			<div id="office">
+			<h2> Act for Kids Service centers </h2> </div>
 			<h4>Adelaide</h4>
 			275 Main North Road, Enfield, South Australia, Australia
 			<div>Phone: (08) 8440 8557</div>
@@ -136,7 +138,8 @@ general inquiry about making a donation please contact us below:</h4></span>
 			<div>Fax: (07) 3857 8626</div>
 			<br>
 			<br>
-			<center><h2>Join us on Social Media</center></h2>
+			<div id="socialmedia"> 
+			<center><h2>Join us on Social Media</center> </h2></div>
 			<p>
 			<center><a href="https://www.facebook.com/ActforKids/">
 			<img border="0" alt="facebook widget" src="images/facebook widget.jpg" width="65px" height="55px">
