--- a/src/services.html
+++ b/src/services.html
@@ -43,7 +43,7 @@
     		<div id="content">
     			<div>
 
-				<!-- Integrated Therapy Services -->
+				<!-- Help Services -->
 
     			<div class="article">
     				<div class="title">
@@ -51,6 +51,8 @@
     					<span class="byline">Act for Kids proudly offers a range of support services to both children and their families!</span> </div>
     				<span class="image image-full"><img src="images/HelpingChildren.jpg" alt="" /></span>
     				<p>Act for kids is an organisation dedicated to making kids lives better, and to do this we offer many different service ranging from therapy from abuse and neglect trauma to providing safe homes for those under child protection orders.</p>
+					
+						<!-- Integrated Therapy Services -->
 					
     					<h2>Integrated Therapy Services</h2>
     					<span class="byline">Therapeutic Service for children,young people, families and/or carers</span> </div>
