Fixed image padding
removed unnecesarry </div>

--- a/src/services.html
+++ b/src/services.html
@@ -55,7 +55,7 @@
 						<!-- Integrated Therapy Services -->
 					
     					<h2>Integrated Therapy Services</h2>
-    					<span class="byline">Therapeutic Service for children,young people, families and/or carers</span> </div>
+    					<span class="byline">Therapeutic Service for children,young people, families and/or carers</span>
     				<span class="image image-full"><img src="images/IntegratedTherapyServices.jpg" style="width:790px;height:260px;" alt="" /></span>
     				<p>The Integrated Therapy Service (ITS) is a therapeutic service for children, young people, their families and/or carers who have behavioural, emotional and/or developmental difficulties due to trauma from abuse and neglect or who are at risk of harm. A full integrated team comprises of speech and language therapists, occupational therapists and psychologists.</p>
 					<p><strong>Speech Therapy</strong></p>
