2nd Information Update

--- a/src/services.html
+++ b/src/services.html
@@ -123,7 +123,7 @@
 				<div class="article">
     				<div class="title">
     					<h2>SafeKIDS</h2>
-    					<span class="byline">Provides safe and culturally appropriate home environments for kids</span>
+    					<span class="byline">Provides safe and culturally appropriate home environments for indigenous kids</span>
 					</div>
     				<span class="image image-full"><img src="images/SafeKIDS.jpg" style="width:790px; height:500px;" alt="" /></span>
     				<p>Many Aboriginal children and young people under child protection orders or investigation are placed in care outside of their communities making maintaining family, community and cultural connections impossible.</p>
